--- a/ui.apps/src/main/content/jcr_root/etc/designs/pdf-generator/clientlib-site/css/style.css
+++ b/ui.apps/src/main/content/jcr_root/etc/designs/pdf-generator/clientlib-site/css/style.css
@@ -20,7 +20,7 @@ body {
     font-family: sans-serif;
     font-size: 0.875em;
     line-height: 1.2;
-    background-color: #d3d3d3;
+    /*background-color: #d3d3d3;*/
 }
 
 a {
